--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  
+  padding: 0;
+    /*font-family: sans-serif;*/
+  background: linear-gradient(89deg,#FF5EDF 0%, #04C8DE 100%);
+  
 }
 
 code {
